src/test/fun-test/semantic/MultipleFieldDecl2.java.err
Semantic error: multiple declaration of field a, line 3, pos 13
