src/test/fun-test/semantic/MultipleFieldDecl2.java
class Main {
    int a;
    double a;

    void main() {}
}